# ow-lfg-bot

./: .env.example  .gitignore  main.py  pyproject.toml  ruff.toml
.github/workflows/: deploy.yml
heroes/: heroes-en.json  passives.json
heroes/Anran/: Anran.json
heroes/Ashe/: Ashe.json
heroes/Bastion/: Bastion.json
heroes/Cassidy/: Cassidy.json
heroes/Mauga/: Mauga.json
migrations/: env.py
migrations/versions/: 1041239e8cdd_add_mythic_prisms_and_mythic_inventory.py  22cae99ca4c3_change_member_mythic_inventory_to_be_.py  388c94587b63_add_mythic_prisms_and_mythic_inventory.py  7c385252f203_initial_migration.py  9ab162c4dc13_rename_memberlevel_table_to_member.py  cbf61c4ebc8d_add_memberlevel_table.py
src/bot/: __init__.py  client.py  logging.py
src/cogs/: __init__.py  about.py  admin.py  events.py  hero.py  leaderboard.py  leveling.py  mythics.py  voice_channel.py
src/console/: __init__.py  console.py  logger.py
src/database/: __init__.py  database.py
src/views/: __init__.py  mythic_view.py
