[project]
name = "ow-lfg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "py-cord>=2.7.1",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "sqlalchemy[asyncio]>=2.0.46",
]
